--- a/app/views/shared/_registration_tab.html.erb
+++ b/app/views/shared/_registration_tab.html.erb
@@ -2,7 +2,7 @@
   resource_name ||= :user
   resource ||= current_user
 %>
-<%= form_for( resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= form_for( resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :autocomplete => 'off' }) do |f| %>
   <div class="field">
     <%= f.label :email %><br/>
     <%= f.text_field :email %>
