last sign in in words

--- a/app/views/admin/subscriptions/index.html.erb
+++ b/app/views/admin/subscriptions/index.html.erb
@@ -20,7 +20,7 @@
     <td><%= subscription.state %></td>
     <td><%= subscription.balance %></td>
     <td><%= subscription.next_renewal_on %></td>
-    <td><%= subscription.subscriber.last_sign_in_at %></td>
+    <td><%= distance_of_time_in_words_to_now(subscription.subscriber.last_sign_in_at) unless subscription.subscriber.last_sign_in_at.nil? %></td>
     <td><%= link_to 'Show', [:admin, subscription] %></td>
     <td><%= link_to 'Edit', edit_admin_subscription_path(subscription) %></td>
     <td><%= button_to 'Manual charge balance', manual_charge_admin_subscription_path(subscription) %></td>
