--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -7,7 +7,7 @@
 
       <div class='field'>
         <%= f.label :email %><br/>
-        <%= f.text_field :email %>
+        <%= f.text_field :email, :type => 'email' %>
       </div>
 
       <p><%= f.submit t('devise.confirmations.new.submit'), :class => 'awesome medium blue'%></p>
