--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_messages %>
 
   <p><%= f.label :email %></p>
-  <p><%= f.text_field :email %></p>
+  <p><%= f.text_field :email, :type => 'email' %></p>
 
   <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i></p>
   <p><%= f.password_field :password %></p>
