--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(resource_name, resource, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_messages %>
   <p><%= f.label :email %></p>
-  <p><%= f.text_field :email %></p>
+  <p><%= f.text_field :email, :type => 'email' %></p>
 
   <p><%= f.label :password %></p>
   <p><%= f.password_field :password %></p>
