--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_messages %>
 
   <p><%= f.label :email %></p>
-  <p><%= f.text_field :email %></p>
+  <p><%= f.text_field :email, :type => 'email' %></p>
 
   <p><%= f.submit "Resend unlock instructions" %></p>
 <% end %>
