--- a/app/views/practices/_practice.html.erb
+++ b/app/views/practices/_practice.html.erb
@@ -47,7 +47,7 @@
       });
     <% end %>
     </li>
-    <li><%= button_to t('actions.duplicate'), practices_path(:practice_id => practice.id), :class => 'small blue awesome' %></li>
+    <li><%= button_to t('actions.duplicate'), practices_path(:practice_id => practice.id), :class => 'small blue awesome', :style => '-webkit-appearance:none;' %></li>
     <% else %>
     <li><%= link_to_function t('actions.undo'), "$.ajax({
           type:'put',
