--- a/app/views/shared/_registration_tab.html.erb
+++ b/app/views/shared/_registration_tab.html.erb
@@ -5,7 +5,7 @@
 <%= form_for( resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :autocomplete => 'off' }) do |f| %>
   <div class="field">
     <%= f.label :email %><br/>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :type => 'email' %>
   </div>
   <div class="field">
     <%= f.label :password %> <%= field_help t('shared.edit_profile_dialog.password_help') %><br/>
