--- a/app/views/shared/_sign_in_fields.html.erb
+++ b/app/views/shared/_sign_in_fields.html.erb
@@ -1,6 +1,6 @@
 <div class='field'>
   <%= f.label :email %><br/>
-  <%= f.text_field :email %>
+  <%= f.text_field :email, :type => 'email' %>
 </div>
 <div class='field'>
 <%= f.label :password %><br/>
