fix play controls

--- a/app/views/practices/_play_practice_technique.html.erb
+++ b/app/views/practices/_play_practice_technique.html.erb
@@ -20,7 +20,7 @@
     <h3><%= PracticeTechnique.human_attribute_name :associated_techniques %></h3>
     <% if practice_technique.techniques.empty? %>
       <p><%= t('practices.play_practice_technique.no_associated_techniques') %></p>
-    <% end %>
+    <% else %>
     <div class='associated_techniques'>
       <% practice_technique.techniques.each do |associated_technique| %>
         <%= div_for(associated_technique, :technique_id => associated_technique.id, :class => "technique") do %>
@@ -29,6 +29,7 @@
         <% end %>
       <% end %>
     </div>
+    <% end %>
   </div>
   </div>
   <% unless next_technique.nil? %>
