--- a/app/views/practices/play.html.erb
+++ b/app/views/practices/play.html.erb
@@ -69,7 +69,7 @@
 
   $('#play_controls #pause').button({
     icons: {
-        primary: 'ui-icon-seek-pause'
+        primary: 'ui-icon-pause'
     },
     text: false
   });
