auto delete warning

--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -517,3 +517,7 @@ div[aria-labelledby = 'ui-dialog-title-edit_practice_technique_dialog'] .ui-dial
 #techniques_accordion .ui-state-disabled.ui-accordion-header, #techniques_accordion .ui-widget-content .ui-state-disabled.ui-accordion-content.ui-accordion-content-active {
     opacity: 0.35;
 }
+
+#auto_delete_alert {
+    margin-top: 10px;
+}
