--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -1,9 +1,9 @@
 <html style="background-color: #fff;">
   <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
-    <div class="ui-widget-header ui-corner-all" id="header" style="-webkit-border-radius: 4px; overflow: hidden; font-weight: bold; color: #ffffff; border: 1px solid #e78f08; height: 62px; -moz-border-radius: 4px; border-radius: 4px; background: #f6a828;">
-      <a href="http://sadhana.com.ar/" style="color: #ffffff;"><img src='http://sadhana.com.ar/images/logo_62.png' style='border: 0;' alt='S&aacute;dhana' /></a>
+    <div id="header" style="width: 100%; position: relative; height: 68px; width: 100%; background:url('http://sadhana.com.ar/images/header_center.jpg') repeat-x">
+      <a href="http://sadhana.com.ar/" style="float: left; width: 155px; height:68px; background:url('http://sadhana.com.ar/images/header_left.jpg') no-repeat;"></a>
+      <span style="float: right; height: 68px; width: 10px; background:url('http://sadhana.com.ar/images/header_right.jpg') no-repeat top right"></span>
     </div>
-
     <div id="content">
       <%= yield %>
     </div>
