fix images url on mail template

--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -1,8 +1,8 @@
 <html style="background-color: #fff;">
   <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
-    <div id="header" style="width: 100%; position: relative; height: 68px; width: 100%; background:url('http://sadhana.com.ar/images/header_center.jpg') repeat-x">
-      <a href="http://sadhana.com.ar/" style="float: left; width: 155px; height:68px; background:url('http://sadhana.com.ar/images/header_left.jpg') no-repeat;"></a>
-      <span style="float: right; height: 68px; width: 10px; background:url('http://sadhana.com.ar/images/header_right.jpg') no-repeat top right"></span>
+    <div id="header" style="width: 100%; position: relative; height: 68px; width: 100%; background:url(http://sadhana.com.ar/images/header_center.jpg) repeat-x">
+      <a href="http://sadhana.com.ar/" style="float: left; width: 155px; height:68px; background:url(http://sadhana.com.ar/images/header_left.jpg) no-repeat;"></a>
+      <span style="float: right; height: 68px; width: 10px; background:url(http://sadhana.com.ar/images/header_right.jpg) no-repeat top right"></span>
     </div>
     <div id="content">
       <%= yield %>
