--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -1,12 +1,12 @@
 <html style="background-color: #fff;">
   <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
-    <table id="header" style="width: 100%; height: 68px; border: 0; empty-cells: show; border-collapse: collapse; table-layout: fixed;" border-spacing="0"; cellspacing="0" cellpadding="0">
+    <table id="header" style="width: 100%; height: 68px; border: 0; empty-cells: show; border-collapse: collapse; table-layout: fixed;" border-spacing="0" cellspacing="0" cellpadding="0">
       <tr style="border-spacing:0;">
         <td style="width: 150px;">
-          <a href="http://sadhana.com.ar/" style="display: block; width: 150px; height:68px; background:url(http://sadhana.com.ar/images/header_left.jpg) no-repeat top left;"></a>
+          <a href="http://sadhana.com.ar/" style="display: block; width: 150px; height:68px; background:url('http://sadhana.com.ar/images/header_left.jpg') no-repeat top left;"></a>
         </td>
-        <td style="background:url(http://sadhana.com.ar/images/header_center.jpg) repeat-x; width: auto; overflow: auto;"></td>
-        <td style="width: 10px; background:url(http://sadhana.com.ar/images/header_right.jpg) no-repeat top right;"></td>
+        <td style="background:url('http://sadhana.com.ar/images/header_center.jpg') repeat-x; width: auto; overflow: auto;"></td>
+        <td style="width: 10px; background:url('http://sadhana.com.ar/images/header_right.jpg') no-repeat top right;"></td>
       </tr>
     </table>
     <div id="content">
