--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -1,14 +1,9 @@
 <html style="background-color: #fff;">
   <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
-    <table id="header" style="width: 100%; height: 68px; border: 0; empty-cells: show; border-collapse: collapse; table-layout: fixed;" border-spacing="0" cellspacing="0" cellpadding="0">
-      <tr style="border-spacing:0;">
-        <td style="width: 150px;">
-          <a href="http://sadhana.com.ar/" style="display: block; width: 150px; height:68px; background:url('http://sadhana.com.ar/images/header_left.jpg') no-repeat top left;"></a>
-        </td>
-        <td style="background:url('http://sadhana.com.ar/images/header_center.jpg') repeat-x; width: auto; overflow: auto;"></td>
-        <td style="width: 10px; background:url('http://sadhana.com.ar/images/header_right.jpg') no-repeat top right;"></td>
-      </tr>
-    </table>
+    <div class="ui-widget-header ui-corner-all" id="header" style="-webkit-border-radius: 4px; overflow: hidden; font-weight: bold; color: #ffffff; border: 1px solid #e78f08; height: 62px; -moz-border-radius: 4px; border-radius: 4px; background: #f6a828;">
+      <a href="http://sadhana.com.ar/" style="color: #ffffff;"><img src='http://sadhana.com.ar/images/logo_62.png' style='border: 0;' alt='S&aacute;dhana' /></a>
+    </div>
+
     <div id="content">
       <%= yield %>
     </div>
