--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -2,15 +2,15 @@
   <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
     <table id="header" style="width: 100%; height: 68px; border: 0; empty-cells: show; border-collapse: collapse; table-layout: fixed;" cellspacing="0" cellpadding="0">
       <tr>
-	<td style="width: 8px;">
+	<td style="width: 8px; height: 68px;">
 	  <img src="http://sadhana.com.ar/images/header_left.jpg">
 	</td>
-	<td style="width: 139px;">
+	<td style="width: 139px; height: 68px;">
 	  <a href="http://sadhana.com.ar/"><img src="http://sadhana.com.ar/images/header_logo.jpg" style="border: 0;"></a>
 	</td>
-	<td background="http://sadhana.com.ar/images/header_center.jpg">
+	<td style="height: 68px;" background="http://sadhana.com.ar/images/header_center.jpg">
 	</td>
-	<td style="width: 10px;">
+	<td style="height: 68px; width: 10px;">
 	  <img src="http://sadhana.com.ar/images/header_right.jpg">
 	</td>
       </tr>
