fix table height

--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -6,7 +6,7 @@
 	  <img src="http://sadhana.com.ar/images/header_left.jpg">
 	</td>
 	<td style="width: 139px; height: 68px;">
-	  <a href="http://sadhana.com.ar/"><img src="http://sadhana.com.ar/images/header_logo.jpg" style="border: 0;"></a>
+	  <a href="http://sadhana.com.ar/" style="display:block;"><img src="http://sadhana.com.ar/images/header_logo.jpg" style="border: 0;"></a>
 	</td>
 	<td style="height: 68px;" background="http://sadhana.com.ar/images/header_center.jpg">
 	</td>
