--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -8,7 +8,7 @@
 	<td style="width: 139px; height: 68px;">
 	  <a href="http://sadhana.com.ar/" style="display:block;"><img src="http://sadhana.com.ar/images/header_logo.jpg" style="border: 0;"></a>
 	</td>
-	<td style="height: 68px;" background="http://sadhana.com.ar/images/header_center.jpg">
+	<td style="height: 68px; background-repeat: repeat-x;" background="http://sadhana.com.ar/images/header_center.jpg">
 	</td>
 	<td style="height: 68px; width: 10px;">
 	  <img src="http://sadhana.com.ar/images/header_right.jpg">
