--- a/public/stylesheets/awesome.css
+++ b/public/stylesheets/awesome.css
@@ -11,6 +11,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   position: relative;
   cursor: pointer;
+  font-family: ProximaNovaRegular;
 }
 
 .awesome:hover {
