--- a/app/views/subscription_mailer/subscription_expired.html.erb
+++ b/app/views/subscription_mailer/subscription_expired.html.erb
@@ -1,2 +1,2 @@
-<%= t('subscription_mailer.subscription_expired.hello', :email => @user.email) %>
+<%= t('subscription_mailer.subscription_expired.hello', :email => @recipients) %>
 <%= t('subscription_mailer.subscription_expired.body', :root_url => root_url) %>
