--- a/app/views/shared/_plans_dialog.html.erb
+++ b/app/views/shared/_plans_dialog.html.erb
@@ -27,7 +27,7 @@
         <li><%= t('shared.plans_dialog.unlimited_shared_practices').html_safe %></li>
         <li class='unlimited'><%= t('shared.plans_dialog.calendar').html_safe %></li>
         <li class='unlimited'><%= t('shared.plans_dialog.share').html_safe %></li>
-        <li class="price"><span class="limited"><%= t('shared.plans_dialog.unavailable') %></span></li>
+        <li class="price">US$ <span class="limited">5</span>/<%= t('datetime.prompts.month') %></li>
       </ul>
     </div>
   </div>
